--- a/css/scss/base/_media-width.scss
+++ b/css/scss/base/_media-width.scss
@@ -138,7 +138,7 @@
         box-shadow: 0px 2px 5px var(--color-faqoutline);
         border-radius: 8px;
 
-        p {
+        p:first-child {
           margin-top: 0;
         }
 
